# Nada

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  bench-latest.md
.github/workflows/: ci.yml
benches/: analysis.rs  convert.rs  dsp.rs  g2p.rs  mix.rs  resample.rs  simd.rs  voice.rs
docs/: migration.md  troubleshooting.md
docs/architecture/: overview.md
docs/development/: dependency-watch.md  roadmap.md  threat-model.md
docs/guides/: production.md
examples/: analysis.rs  creature.rs  graph.rs  midi.rs  mixing.rs  synthesis.rs  voice.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_analysis.rs  fuzz_biquad.rs  fuzz_convert.rs  fuzz_dsp.rs  fuzz_graph.rs  fuzz_midi.rs  fuzz_mix.rs  fuzz_noise_reduce.rs  fuzz_resample.rs
src/: error.rs  ffi.rs  lib.rs
src/acoustics/: mod.rs
src/analysis/: chroma.rs  dynamics.rs  fft.rs  loudness.rs  mod.rs  onset.rs  stft.rs  waveform.rs
src/buffer/: convert.rs  dither.rs  mod.rs  ops.rs  resample.rs
src/capture/: mod.rs  pw.rs  record.rs
src/clock/: mod.rs
src/creature/: mod.rs
src/dsp/: biquad.rs  compressor.rs  convolution.rs  deesser.rs  delay.rs  envelope.rs  eq.rs  gain_smoother.rs  graphic_eq.rs  lfo.rs  limiter.rs  mod.rs  noise_reduction.rs  oscillator.rs  pan.rs  reverb.rs  svf.rs
src/environment/: mod.rs
src/g2p/: mod.rs
src/graph/: mod.rs
src/mechanical/: mod.rs
src/meter/: mod.rs
src/midi/: mod.rs  routing.rs  translate.rs  v2.rs  voice.rs
src/sampler/: mod.rs
src/simd/: aarch64.rs  mod.rs  x86.rs
src/synthesis/: mod.rs
src/tests/: mod.rs  proptest_tests.rs  serde_tests.rs
src/voice_synth/: bhava_bridge.rs  mod.rs
supply-chain/: audits.toml  config.toml
