[package]
name = "dhvani"
version = "0.22.4"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-only"
description = "Core audio engine — buffers, DSP, resampling, mixing, analysis, and capture for Rust"
homepage = "https://github.com/MacCracken/dhvani"
repository = "https://github.com/MacCracken/dhvani"
readme = "README.md"
keywords = ["audio", "dsp", "mixing", "resampling", "pipewire"]
categories = ["multimedia", "multimedia::audio"]

[features]
default = ["simd", "dsp", "analysis", "midi", "graph"]
# Core (always available): AudioBuffer, format conversion, mixing, resampling, clock, error types
# Module features
dsp = []
analysis = ["dsp"]                      # R128 K-weighting uses biquad, dynamics uses dB conversion
midi = []
graph = []
synthesis = ["dep:naad"]                # Synthesis engines: subtractive, FM, additive, wavetable, granular, physical, drum, vocoder
voice = ["dep:svara", "synthesis"]      # Voice synthesis: glottal source, formant, phoneme, prosody, vocal tract
# Platform
simd = []
pipewire = ["dep:pipewire"]
# Bundles
full = ["simd", "dsp", "analysis", "midi", "graph", "synthesis", "voice", "pipewire"]

[dependencies]
abaco = { version = "1.0.0", path = "../abaco" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Synthesis
naad = { version = "1.0.0", optional = true }
svara = { version = "1.0.0", optional = true, default-features = false, features = ["naad-backend"] }

# Audio capture
pipewire = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
serde_json = "1"

[[bench]]
name = "mix"
harness = false

[[bench]]
name = "resample"
harness = false

[[bench]]
name = "dsp"
harness = false
required-features = ["dsp"]

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "simd"
harness = false
required-features = ["dsp"]

[[bench]]
name = "analysis"
harness = false
required-features = ["analysis"]

[[example]]
name = "analysis"
required-features = ["analysis"]

[[example]]
name = "mixing"
required-features = ["dsp", "analysis"]

[[example]]
name = "midi"
required-features = ["midi"]

[[example]]
name = "graph"
required-features = ["graph"]

[[example]]
name = "synthesis"
required-features = ["synthesis"]

[[example]]
name = "voice"
required-features = ["voice"]
